# vlma

./: CMakeLists.txt  README.md  compute_averages.sh  package.xml  run_map_alignment_tests.sh
config/: map1.json  map2.json
config/ConestogoBridge/: map1.json  map2.json  map3.json  map4.json
config/StructuresLab/: map1.json  map2.json  map3.json  map4.json  map5.json
include/vl_traj_alignment/: BoW3D.h  Frame.h  LinK3D_Extractor.h  helpers.h  pose_lookup.h
include/vl_traj_alignment/scancontext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.h
include/vlma/: helpers.h  map.h
include/vlma/scancontext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.h
src/: BoW3D.cpp  Frame.cpp  LinK3D_Extractor.cpp  Scancontext.cpp  aloam_to_json.cpp  average_roughness.cpp  bag_to_traj.cpp  con_slam_to_bag.cpp  highlight_changes.cpp  main.cpp  pose_lookup.cpp
